Disc page divs now reordered for small resolutions (Cover, Title, then separate Text div). Extra Cover and Title divs added outside the orginal row which display only on mobile (original Covers and Titles no longer display on mobile).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,10 +78,6 @@ h1, h2, h3, h4 {
     opacity: 0.8;
     position: scroll;
     height: 8vh;
-    /* May not need these now */
-    /* margin: 0; */
-    /* margin-top: -10px; */
-    /* height: 40px; */
 }
 
 .cta-text {
@@ -579,6 +575,20 @@ footer {
     }
     .media-card iframe {
         height: 15em;
+    }
+    .disc-card-heading h3 {
+        text-align: center;
+        color: #F2EED8;
+    }
+    .disc-album-cover {
+        padding-top: 1.5em;
+        padding-bottom: 0;
+    }
+    .disc-card-text{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 1.5em;
     }
     .copyright-text {
         padding-top: 0px;
